@@ -69,6 +69,8 @@ typedef HMONITOR (WINAPI *MONITORFROMWINDOW)(HWND hwnd, DWORD dwFlags);
 typedef HMONITOR (WINAPI *MONITORFROMPOINT)(POINT pt, DWORD dwFlags);
 typedef BOOL (WINAPI *FLASHWINDOWEX)(PFLASHWINFO pwfi);
 typedef BOOL (WINAPI *_TRACKMOUSEEVENT)(TRACKMOUSEEVENT *);
+typedef BOOL (WINAPI *GETMONITORINFO)(HMONITOR hMonitor, LPMONITORINFO lpmi);
+typedef LONG (WINAPI *CHANGEDISPLAYSETTINGSEX)(LPCTSTR lpszDeviceName, LPDEVMODE lpDevMode, HWND hwnd, DWORD dwflags, LPVOID lParam);
 
 typedef struct WIN32DRIVER
 {
@@ -92,9 +94,11 @@ typedef struct WIN32DRIVER
 	/* user32 procs */
 	SETLAYEREDWINDOWATTRIBUTES SetLayeredWindowAttributes;
 	MONITORFROMWINDOW MonitorFromWindow;
-  MONITORFROMPOINT MonitorFromPoint;
-  FLASHWINDOWEX FlashWindowEx;
-  _TRACKMOUSEEVENT TrackMouseEvent;
+	MONITORFROMPOINT MonitorFromPoint;
+	FLASHWINDOWEX FlashWindowEx;
+	_TRACKMOUSEEVENT TrackMouseEvent;
+	GETMONITORINFO GetMonitorInfo;
+	CHANGEDISPLAYSETTINGSEX ChangeDisplaySettingsEx;
 } WIN32DRIVER;
 
 
