@@ -5,6 +5,7 @@ Version 0.21.0 Beta:
 
 [added]
 - FORMAT now supports the "n" character to unambiguously specify minutes, as in VB - e.g. 'format( now(), "nn:ss" )' (counting_pine)
+- Multi-monitor support for Win32 GDI gfx driver (DrV)
 
 [fixed]
 - WIDTH was crashing when optional parameter was not specified (DrV)
